welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: not found: value setPas
      setPas(getX()+1,0)
      ^ColumnByColumn:10: error: not found: value setPOs
      setPOs(getX(),getY()+1)
      ^