welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var Xfinal=getMondeLargeur()-1
  var yfinal=getMondeHauteur()-1
  var c=0
  ecritMessage(c)
  while (getX!=Xfinal || getY()!=yfinal){
    c=c+1
    if (getY()==yfinal){
      setPas(getX()+1,0)
    }else{
      setPOs(getX(),getY()+1)
    }
    ecritMessage(c)


  }
}